--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
-    "@prismicio/client": "^7.11.0",
-    "@prismicio/next": "^1.6.0",
+    "@prismicio/client": "^7.15.1",
+    "@prismicio/next": "^1.7.1",
     "@prismicio/react": "^2.8.0",
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.6",
     "@types/three": "^0.167.2",
     "clsx": "^2.1.1",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.471.1",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
